syntax = "proto3";
option csharp_namespace = "DatasourceGRPC"; 

package Datasource;

import "google/api/annotations.proto";

service Datasource_Service {
  rpc GetDatasources (GetDatasourcesRequest) returns (Datasources) {
    option (google.api.http).get = "/datasource";
  };
  rpc GetDatasource (DatasourceIdRequest) returns (Datasource) {
    option (google.api.http).get = "/datasource/{id}";
  };
  rpc CreateDatasource (DatasourceRequest) returns (Datasource) {
    option (google.api.http) = {
      post: "/datasource"
      body: "*"
    };
  };
  rpc EditDatasource (DatasourceEditRequest) returns (Datasource) {
    option (google.api.http) = {
      put: "/datasource"
      body: "*"
    };
  };
  rpc DeleteDatasource (DatasourceIdRequest) returns (Datasource) {
    option (google.api.http).delete = "/datasource/{id}";
  };
}

message Datasources {
  repeated Datasource datasources = 1;
}

message GetDatasourcesRequest {}

message DatasourceIdRequest {
  string id = 1;
}

message DatasourceRequest {
  string name = 1;
  string description = 2;
  string reference = 3;
  bool active = 4;
}

message DatasourceEditRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string reference = 4;
    bool active = 5;
}

message Datasource {
  string id = 1;
  string name = 2;
  string description = 3;
  string reference = 4;
  bool active = 5;
}