syntax = "proto3";
option csharp_namespace = "Research.GRPC"; 

import "datasource.proto";

service Research_Service {
  rpc GetResearches (GetResearchesRequest) returns (Researches);
  rpc GetResearch (ResearchIdRequest) returns (Research);
  rpc CreateResearch (ResearchCreateRequest) returns (Research);
  rpc EditResearch (ResearchEditRequest) returns (Research);
  rpc DeleteResearch (ResearchIdRequest) returns (ResearchEmptyResponse);

  rpc AddDatasourceToResearch (Datasource) returns (Research);
  rpc RemoveDatasourceFromResearch (DatasourceIdResearchRequest) returns (Research);
  rpc InviteUsersToResearch (EmailRequests) returns (EmailEmptyResponse);
}

message Researches {
  repeated Research researches = 1;
}

message ResearchIdRequest {
  string id = 1;
}

message GetResearchesRequest {}

message ResearchCreateRequest {
  string name = 1;
  string description = 2;
  string imageUrl = 3;
  int64 startDate = 4;
  int64 endDate = 5;
  bool active = 6;
  string ownerId = 7;
}

message ResearchEditRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageUrl = 4;
  int64 startDate = 5;
  int64 endDate = 6;
  bool active = 7;
  string ownerId = 8;
}

message ResearchEmptyResponse {}

message DatasourceIdResearchRequest {
  string id = 1;
}

message EmailRequests {
  repeated string email = 1;
}

message EmailEmptyResponse {}

message Research {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageUrl = 4;
  int64 startDate = 5;
  int64 endDate = 6;
  bool active = 7;
  string ownerId = 8;
  repeated Datasource datasources = 9;
}